fix hero on mobile

--- a/src/blocks/hero/hero.scss
+++ b/src/blocks/hero/hero.scss
@@ -8,11 +8,19 @@
 		background-position: right center;
 	}
 	
+	@include media('<=xxxs') {
+		margin-top: 0;
+	}
+	
 	&__inner {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
 		min-height: 100vh;
+		
+		@include media('<=xxxs') {
+			min-height: 0;
+		}
 	}
 
 	&__side {
